--- a/src/static/package.json
+++ b/src/static/package.json
@@ -41,7 +41,8 @@
           ],
           "plugins": [
             "transform-class-properties"
-          ]
+          ],
+          "compact": true
         }
       ]
     ]
